# Containerization-with-Docker

./: README.md  langgraph_1.ipynb
docker/docker_db/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docker/docker_db/app/: db_test.py  main.py  settings.py
docker/dockertest/: Dockerfile  README.md  compose.yaml  pyproject.toml
docker/dockertest/dockertest/: main.py
